feat: added CRUD method for cats
